// Original file: product.proto


export interface ProductData {
  'productName'?: (string);
  'productDescription'?: (string);
  'productPrice'?: (number);
  'productUUID'?: (string);
  'productImage'?: (string);
}

export interface ProductData__Output {
  'productName': (string);
  'productDescription': (string);
  'productPrice': (number);
  'productUUID': (string);
  'productImage': (string);
}
